--- a/style.css
+++ b/style.css
@@ -534,8 +534,8 @@ color: inherit;
         font-size: 12px
     }
     .logo{
-        height: 19px;
-        width: 22px;
+        height: 20px;
+        width: auto;
         padding-right: 15px; 
         display: inline-block;
         padding-left: 15px;
